<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/luminor_hotel"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.147"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.092" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="320dp"
        android:layout_height="188dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/luminor_hotel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.222" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="327dp"
        android:layout_height="176dp"
        android:text="@string/luminor_hotel_purwokerto_sebuah_penginapan_yang_sangat_setrategis_berada_di_pusat_kota_purwokerto_berdekatan_dengan_pusat_perbelanjaan_dan_alun_alun_kota_purwokerto_hotel_nyaman_dan_bersih_dengan_beragam_fasilitas_yang_disediakan_guna_menunjang_kenyamanan_menginap_para_tamu_harga_yang_terjangkau_bisa_menjadi_pilihan_akomodasi_perjalanan_anda"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.700" />
</androidx.constraintlayout.widget.ConstraintLayout>